--- a/css/style.css
+++ b/css/style.css
@@ -715,7 +715,7 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 3em;
+  margin-bottom: 5em;
   background: #FF5300;
   border-radius: 10px;
   -ms-flex-pack: distribute;
@@ -783,4 +783,230 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.OurBlog__h2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: "Noto Sans KR", sans-serif;
+  font-style: bold;
+  font-weight: 700;
+  font-size: 39px;
+  line-height: 150%;
+  color: #373737;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 2em;
+}
+
+.blog {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 3px;
+  margin-bottom: 5em;
+}
+
+.blog__item {
+  display: block;
+  padding: 5px;
+  margin: 10px;
+  background: #FFFFFF;
+  -webkit-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  padding-left: 15px;
+}
+
+.blog__imges {
+  max-width: 340px;
+  max-height: 225px;
+  margin-bottom: 2em;
+}
+
+.blog__img {
+  width: 100%;
+}
+
+.blog__type {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: "Noto Sans KR", sans-serif;
+  font-style: medium;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 150%;
+  color: #373737;
+  margin-bottom: 1em;
+}
+
+.blog__description {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 1em;
+}
+
+.blog__date {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.blog__date img {
+  margin-right: 0.3em;
+}
+
+.blog__date_text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: "Noto Sans KR", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 10.5px;
+  line-height: 188%;
+  color: #373737;
+  margin-right: 0.6em;
+}
+
+.blog__text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: "Noto Sans KR", sans-serif;
+  font-style: medium;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  color: #7B7B7B;
+  margin-bottom: 1em;
+}
+
+.blog__btn {
+  padding: 10px 30px;
+  -webkit-filter: drop-shadow(4px 5px 15px rgba(255, 83, 0, 0.1));
+          filter: drop-shadow(4px 5px 15px rgba(255, 83, 0, 0.1));
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: "Noto Sans KR", sans-serif;
+  font-style: medium;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 150%;
+  color: #373737;
+  background: #FF5300;
+  border-radius: 5px;
+  color: #FFFFFF;
+  margin-bottom: 1em;
+  border: none;
+  text-align: center;
+}
+
+.Subscribe {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 200px;
+  background: #FF5300;
+  -webkit-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 5em;
+}
+
+.Subscribe__name {
+  display: block;
+  width: 40%;
+  padding: 50px;
+}
+
+.Subscribe__text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: "Noto Sans KR", sans-serif;
+  font-style: medium;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  color: #7B7B7B;
+  color: #FFFFFF;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 1em;
+}
+
+.Subscribe__text::after {
+  content: "";
+  border: 1px solid #FFFFFF;
+  width: 40px;
+  height: 0;
+  margin-left: 15px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.Subscribe__h2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: "Noto Sans KR", sans-serif;
+  font-style: bold;
+  font-weight: 700;
+  font-size: 39px;
+  line-height: 150%;
+  color: #373737;
+  color: #FFFFFF;
+}
+
+.form {
+  width: 60%;
+  padding: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.form__input {
+  max-width: 642px;
+  height: 70px;
+  border: none;
+}
+
+.form__btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: "Noto Sans KR", sans-serif;
+  font-style: medium;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 150%;
+  color: #373737;
+  background: #FF5300;
+  color: #FFFFFF;
+  padding: 15px 30px;
+  -webkit-filter: drop-shadow(4px 5px 15px rgba(255, 83, 0, 0.1));
+          filter: drop-shadow(4px 5px 15px rgba(255, 83, 0, 0.1));
+  border: none;
 }
