--- a/scss/style.scss
+++ b/scss/style.scss
@@ -59,6 +59,15 @@
 	line-height: 150%;
 	color: #7B7B7B;
 }
+@mixin font_MicroText{
+	display: flex;
+	font-family: 'Noto Sans KR', sans-serif;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 10.5px;
+	line-height: 188%;
+	color: #373737;
+}
 
 .wrapper {
 	max-width: 1170px;
@@ -409,7 +418,7 @@ a{
 
 .result {
 	display: flex;
-	margin-bottom: 3em;
+	margin-bottom: 5em;
 	background: #FF5300;
     border-radius: 10px;
     justify-content: space-around;
@@ -449,4 +458,126 @@ a{
 	border-radius: 4px;
 	display: flex;
 	
+}
+
+
+.OurBlog__h2 {
+	@include font_h2;
+	justify-content: center;
+	margin-bottom: 2em;
+}
+.blog {
+	display: flex;
+	justify-content: space-between;
+	padding: 3px;
+	margin-bottom: 5em;
+}
+.blog__item {
+	display: block;
+	padding: 5px;
+	margin: 10px;
+	background: #FFFFFF;
+	box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+	border-radius: 10px;
+	padding-left: 15px;
+}
+.blog__imges {
+	max-width: 340px;
+    max-height: 225px;
+    // margin: 0 auto;
+    margin-bottom: 2em;
+
+}
+.blog__img {
+	width: 100%;
+}
+.blog__type {
+	@include font_menu;
+	margin-bottom: 1em;
+
+}
+.blog__description {
+	display: flex;
+	margin-bottom: 1em;
+}
+.blog__date {
+	display: flex;
+	align-items: center;
+}
+.blog__date img{
+	margin-right: 0.3em;
+}
+.blog__date_text {
+	@include font_MicroText;
+	margin-right: 0.6em;
+}
+.blog__text {
+	@include font_text;
+	margin-bottom: 1em;
+}
+.blog__btn {
+	// width: 150px;
+	// height: 50px;
+	padding: 10px 30px;
+	filter: drop-shadow(4px 5px 15px rgba(255, 83, 0, 0.1));
+	@include font_menu;
+	background: #FF5300;
+	border-radius: 5px; 
+	color: #FFFFFF;
+	margin-bottom: 1em;
+	border: none;
+	text-align: center;
+}
+
+.Subscribe {
+	display: flex;
+	width: 100%;
+	height: 200px;
+	background: #FF5300;
+	box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+	border-radius: 10px;
+	align-items: center;
+	margin-bottom: 5em;
+}
+.Subscribe__name {
+	display: block;
+	width: 40%;
+	padding: 50px;
+}
+.Subscribe__text {
+	@include font_text;
+	color: #FFFFFF;
+	align-items: center;
+	margin-bottom: 1em;
+}
+.Subscribe__text::after {
+	content: "";
+	border: 1px solid #FFFFFF;
+	width: 40px;
+	height: 0;
+	margin-left: 15px;	
+	align-items: center;
+}
+.Subscribe__h2 {
+	@include font_h2;
+	color: #FFFFFF;
+}
+.form {
+	width: 60%;
+	padding: 50px;
+	display: flex;
+	justify-content: center;
+}
+.form__input{
+	max-width: 642px;
+	height: 70px;
+	border: none;
+}
+.form__btn{
+	@include font_menu;
+	background: #FF5300;
+	color: #FFFFFF;
+	padding: 15px 30px;
+	filter: drop-shadow(4px 5px 15px rgba(255, 83, 0, 0.1));
+	border: none;
 }
