--- a/css/style.css
+++ b/css/style.css
@@ -977,20 +977,36 @@ a {
 }
 
 .form {
-  width: 60%;
-  padding: 50px;
+  height: 70px;
+  width: 45%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background: #FFFFFF;
+  border-radius: 5px;
 }
 
 .form__input {
-  max-width: 642px;
-  height: 70px;
+  margin: 10px 0 0px 15px;
+  max-width: 500px;
+  height: 50px;
   border: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: "Noto Sans KR", sans-serif;
+  font-style: medium;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  color: #7B7B7B;
+}
+
+.form__input:focus {
+  outline: 0;
 }
 
 .form__btn {
@@ -1005,8 +1021,105 @@ a {
   color: #373737;
   background: #FF5300;
   color: #FFFFFF;
-  padding: 15px 30px;
+  padding: 10px 30px;
   -webkit-filter: drop-shadow(4px 5px 15px rgba(255, 83, 0, 0.1));
           filter: drop-shadow(4px 5px 15px rgba(255, 83, 0, 0.1));
   border: none;
+  border-radius: 5px;
+  margin: 5px 5px 5px 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.form__btn:hover {
+  padding: 7px 29px;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.footer {
+  display: block;
+}
+
+.footer-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 60px;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.95)), to(rgba(0, 0, 0, 0.95))), url(Daco_1772774.png);
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.95), rgba(0, 0, 0, 0.95)), url(Daco_1772774.png);
+}
+
+.footer__about_us {
+  display: block;
+  width: 23%;
+  padding: 5px;
+}
+
+.footer__description {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: "Noto Sans KR", sans-serif;
+  font-style: medium;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  color: #7B7B7B;
+  color: #FFFFFF;
+}
+
+.footer__contacts {
+  display: block;
+  width: 22%;
+  padding: 5px;
+}
+
+.footer__contacts3 {
+  display: block;
+  width: 33%;
+  padding: 5px;
+}
+
+.footer__h4 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: "Noto Sans KR", sans-serif;
+  font-style: bold;
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 150%;
+  color: #373737;
+  color: #FF5300;
+  margin-bottom: 1em;
+}
+
+.footer__text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: "Noto Sans KR", sans-serif;
+  font-style: medium;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 150%;
+  color: #373737;
+  color: #FFFFFF;
+}
+
+.footer__imges img {
+  margin: 0 5px;
+}
+
+.footer__border {
+  border: 1px solid #FFFFFF;
+  width: 100%;
+  height: 0;
+  padding: 2em 0;
 }
