--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,11 @@ a {
   margin: 0px;
 }
 
+.body {
+  overflow-x: hidden;
+  overflow-y: scroll !important;
+}
+
 .heder {
   width: 100%;
   top: 0;
@@ -814,6 +819,18 @@ a {
   margin-bottom: 2em;
 }
 
+#more {
+  display: none;
+}
+
+#more2 {
+  display: none;
+}
+
+#more3 {
+  display: none;
+}
+
 .blog {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -826,6 +843,7 @@ a {
 }
 
 .blog__item {
+  width: 30%;
   display: block;
   padding: 5px;
   margin: 10px;
@@ -834,6 +852,7 @@ a {
           box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   padding-left: 15px;
+  position: relative;
 }
 
 .blog__imges {
@@ -903,6 +922,7 @@ a {
   line-height: 150%;
   color: #7B7B7B;
   margin-bottom: 1em;
+  display: block;
 }
 
 .blog__btn {
