--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;500;700&display=swap");
 .wrapper {
   max-width: 1170px;
@@ -564,17 +565,57 @@ a {
           justify-content: center;
 }
 
-.slider {
+.slick-list {
+  overflow: hidden;
+}
+
+/* Лента слайдов */
+.slick-track {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+/* Стрелка */
+.slick-arrow {
+  position: absolute;
+  top: 50%;
+  z-index: 10;
+  font-size: 0;
+  width: 50px;
+  height: 50px;
+  border: none;
+}
+
+.slick-arrow:hover {
+  -webkit-transform: scale(0.8);
+          transform: scale(0.8);
+}
+
+/* Стрелка влево */
+.slick-arrow.slick-prev {
+  left: 0;
+  background: url("../img/left.svg") 0 0/100% no-repeat;
+}
+
+/* Стрелка вправо */
+.slick-arrow.slick-next {
+  right: 0;
+  background: url("../img/Right.svg") 0 0/100% no-repeat;
+}
+
+.slider {
+  position: relative;
   margin-bottom: 3em;
+  min-width: 0;
+  padding: 0 40px;
 }
 
 .slider__item {
   display: block;
   padding: 25px;
   margin: 0 1em;
+  min-width: 0;
 }
 
 .slider__item img {
@@ -821,14 +862,17 @@ a {
 
 #more {
   display: none;
+  z-index: 5;
 }
 
 #more2 {
   display: none;
+  z-index: 5;
 }
 
 #more3 {
   display: none;
+  z-index: 5;
 }
 
 .blog {
@@ -852,7 +896,6 @@ a {
           box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   padding-left: 15px;
-  position: relative;
 }
 
 .blog__imges {
