--- a/css/style_1024.css
+++ b/css/style_1024.css
@@ -283,8 +283,17 @@
   }
 
   .Subscribe {
-    height: 170px;
+    height: 190px;
     margin-bottom: 4em;
+  }
+
+  .Subscribe__name {
+    width: 30%;
+    padding: 10px 30px;
+  }
+
+  .form {
+    width: 60%;
   }
 
   .footer {
