--- a/scss/style.scss
+++ b/scss/style.scss
@@ -658,11 +658,12 @@ a{
 .form {
 	// max-width: 950px;
 	height: 70px;
-	width: 45%;
+	width: 60%;
 	display: flex;
 	justify-content: space-between;
 	background: #FFFFFF;
 	border-radius: 5px;
+	margin-right: 20px;
 }
 
 .form__input{
