--- a/scss/style_1024.scss
+++ b/scss/style_1024.scss
@@ -255,8 +255,15 @@
 
 .Subscribe {
 	
-	height: 170px;
+	height: 190px;
 	margin-bottom: 4em;
+}
+.Subscribe__name {
+  width: 30%;
+  padding: 10px 30px;
+}
+.form{
+  width: 60%;
 }
 
 .footer{
