--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ a {
 }
 
 .header__body {
+  width: 100%;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -90,8 +91,19 @@ a {
 }
 
 .header__btn {
-  right: 0;
-  width: 18%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  padding: 0px;
+  width: 135px;
+  height: 50px;
 }
 
 .btn {
