--- a/css/style_768.css
+++ b/css/style_768.css
@@ -3,9 +3,17 @@
     max-width: 767px;
   }
 
+  .header__menu {
+    top: -390%;
+    left: -30px;
+    width: 100%;
+    height: 270%;
+  }
+
   .wrapper {
     max-width: 627px;
     margin: 0 auto;
+    padding: 0 9.1%;
   }
 
   .WhatMatters {
@@ -318,7 +326,7 @@
 
   .adaptation1 {
     display: block;
-    width: 50%;
+    width: 45%;
     padding: 10px;
   }
 
@@ -412,6 +420,34 @@
     padding: 5px;
   }
 
+  .result {
+    width: 100%;
+    display: block;
+    margin: 0 0px 3em 0px;
+    padding: 20px 0px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .resultStatistics {
+    display: block;
+    text-align: center;
+    width: 100%;
+    height: 135px;
+  }
+
+  .resultStatistics__border {
+    border: 3px solid #FFFFFF;
+    width: 134px;
+    height: 0px;
+    border-radius: 4px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 1em auto;
+  }
+
   .footer {
     padding: 40px 0;
   }
@@ -494,7 +530,55 @@
     margin-right: 68.5px;
   }
 }
-@media screen and (max-width: 767px) and (max-width: 640px) {
+@media screen and (max-width: 767px) and (max-width: 650px) {
+  .header__logo {
+    padding-left: 50%;
+  }
+
+  .header__btn {
+    position: absolute;
+    right: 0;
+    top: 90px;
+    width: 135px;
+    height: 50px;
+  }
+
+  .btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    font-family: "Noto Sans KR", sans-serif;
+    font-style: medium;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 150%;
+    color: #373737;
+    padding: 0.3em 0.5em;
+  }
+}
+@media screen and (max-width: 767px) and (max-width: 650px) and (max-width: 441px) {
+  .footer__about_us {
+    display: block;
+    width: 80%;
+    padding: 5px;
+    margin: 10px 0;
+  }
+
+  .footer__contacts {
+    display: block;
+    width: 80%;
+    padding: 5px;
+    margin: 10px 0;
+  }
+
+  .footer__contacts3 {
+    display: block;
+    width: 90%;
+    padding: 5px;
+    margin: 10 0px;
+  }
+}
+@media screen and (max-width: 767px) and (max-width: 650px) and (max-width: 441px) and (max-width: 640px) {
   .grid {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
@@ -578,7 +662,7 @@
     margin-bottom: 2em;
   }
 }
-@media screen and (max-width: 767px) and (max-width: 640px) and (max-width: 520px) {
+@media screen and (max-width: 767px) and (max-width: 650px) and (max-width: 441px) and (max-width: 640px) and (max-width: 520px) {
   .form {
     height: 110px;
     width: 100%;
