--- a/scss/style_1024.scss
+++ b/scss/style_1024.scss
@@ -69,14 +69,9 @@
 }
 
 
-
-.body {
-    max-width: 1023px;
-}
 .wrapper{
-    max-width: 823px;
-    // padding: 0 100px;
-    margin: 0 auto;
+    max-width: 1023px;
+    padding: 0 100px;
 
 }
 .heder {
@@ -256,7 +251,6 @@
 
 .Subscribe {
 	
-	height: 190px;
 	margin-bottom: 4em;
 }
 .Subscribe__name {
