--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,15 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;500;700&display=swap");
 .body {
-  max-width: 1440px;
   overflow-x: hidden;
   overflow-y: scroll !important;
+  margin: 0 auto;
 }
 
 .wrapper {
-  max-width: 1170px;
+  max-width: 1440px;
   margin: 0 auto;
-  padding: 0 9.3%;
+  padding: 0 135px;
 }
 
 a {
@@ -1025,7 +1025,6 @@ a {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  height: 200px;
   background: #FF5300;
   -webkit-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
