--- a/css/style_1024.css
+++ b/css/style_1024.css
@@ -1,11 +1,7 @@
 @media screen and (max-width: 1023px) {
-  .body {
-    max-width: 1023px;
-  }
-
   .wrapper {
-    max-width: 823px;
-    margin: 0 auto;
+    max-width: 1023px;
+    padding: 0 100px;
   }
 
   .heder {
@@ -284,7 +280,6 @@
   }
 
   .Subscribe {
-    height: 190px;
     margin-bottom: 4em;
   }
 
