--- a/scss/style.scss
+++ b/scss/style.scss
@@ -69,15 +69,16 @@
 	color: #373737;
 }
 .body{
-	 max-width: 1440px;
+	
 	overflow-x: hidden;
 	overflow-y: scroll !important;
+	margin: 0 auto;
 }
 
 .wrapper {
-	max-width: 1170px;
+	max-width: 1440px;
 	 margin: 0 auto;
-	 padding: 0 9.3%;	
+	 padding: 0 135px;	
 }
 a{
 	text-decoration: none;
@@ -148,7 +149,7 @@ a{
 .btn {
 	@include font_menu;
     padding: 0.5em 0.8em;
-   
+
 }
 
 .WhatMatters {
@@ -631,7 +632,6 @@ a{
 .Subscribe {
 	display: flex;
 	width: 100%;
-	height: 200px;
 	background: #FF5300;
 	box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
 	border-radius: 10px;
