--- a/scss/style_768.scss
+++ b/scss/style_768.scss
@@ -67,9 +67,7 @@
 	line-height: 188%;
 	color: #373737;
 }
-  .body {
-    max-width: 767px;
-}
+
 .header__menu{
   	top: -390%;
   	left: -30px;
@@ -77,9 +75,8 @@
   	height: 270%;
   }
 .wrapper{
-    max-width: 627px;
-    margin: 0 auto;
-   padding: 0 9.1%;
+    max-width: 767px;
+    padding: 0 70px;
 }
 .WhatMatters {
 	display: block;
@@ -184,7 +181,7 @@
 }
 .OurCapabilities__description{
 	width: 100%;
-	padding: 5px 20px 5px 5px;
+	padding: 5px 5px 5px 5px;
 }
 .OurCapabilities__h2 {
 	@include font_h2;
@@ -212,12 +209,13 @@
 .blog__item {
 	width: 100%;
 	flex: none;
-	padding: 5px;
-	margin: 10px;
+	padding-left: 0;
+	margin: 0;
+	padding: 0;
 }
 .blog__imges {
 	width: 50%;
-	padding: 10px;
+	padding: 0;
 }
 .adaptation{
 	display: flex;
@@ -230,9 +228,8 @@
 .Subscribe {
 	display: block;
 	width: 100%;
-	height: auto;
 	margin-bottom: 3em;
-	padding: 10px;
+	
 }
 .Subscribe__name {
 	display: block;
@@ -253,7 +250,10 @@
 .form {
 	margin-right: 5px;
 	height: 60px;
-	width: 100%;
+	width: 95%;
+	margin: 0 auto;
+	
+
 }
 
 .form__input{
