--- a/css/style_320.css
+++ b/css/style_320.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 319px) {
+@media screen and (max-width: 320px) {
   .wrapper {
     max-width: 319px;
     padding: 0 5px;
@@ -227,6 +227,53 @@
     color: #373737;
     margin-bottom: 0;
     text-align: center;
+  }
+
+  .OurProject__grid {
+    -ms-grid-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+  }
+
+  .OurProject__grid > *:nth-child(1) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+  }
+
+  .OurProject__grid > *:nth-child(2) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 2;
+  }
+
+  .OurProject__grid > *:nth-child(3) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+  }
+
+  .OurProject__grid > *:nth-child(4) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 2;
+  }
+
+  .OurProject__grid > *:nth-child(5) {
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
+  }
+
+  .OurProject__grid > *:nth-child(6) {
+    -ms-grid-row: 3;
+    -ms-grid-column: 2;
+  }
+
+  .OurProject__grid > *:nth-child(7) {
+    -ms-grid-row: 4;
+    -ms-grid-column: 1;
+  }
+
+  .OurProject__grid > *:nth-child(8) {
+    -ms-grid-row: 4;
+    -ms-grid-column: 2;
   }
 
   .OurProject__menu {
