--- a/scss/style_768.scss
+++ b/scss/style_768.scss
@@ -361,6 +361,21 @@
 	margin-left: 68.5px;
 	margin-right: 68.5px;
 }
+
+.modal .modal-wrapper {
+	width: 70%;
+	height: 60%;
+	max-width: 400px;
+	min-height: 300px;
+	top: 10%;
+	
+}
+
+
+
+
+
+
 @media screen and (max-width: 650px){
 	.header__logo {
 	
