--- a/css/style_320.css
+++ b/css/style_320.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 321px) {
   .wrapper {
     max-width: 319px;
     padding: 0 5px;
@@ -12,7 +12,8 @@
   .header__menu {
     left: 2px;
     width: 100%;
-    z-index: 10;
+    height: 200%;
+    z-index: 20;
   }
 
   .header__logo {
