--- a/css/style_360.css
+++ b/css/style_360.css
@@ -484,6 +484,7 @@
   }
 
   .form {
+    margin: 5px 0;
     height: 110px;
     width: 100%;
     display: block;
@@ -491,7 +492,7 @@
 
   .form__input {
     margin: 10px;
-    max-width: 400px;
+    max-width: 340px;
     height: 50px;
     border: none;
     display: -webkit-box;
