--- a/scss/style_320.scss
+++ b/scss/style_320.scss
@@ -299,7 +299,7 @@
 	align-items: center;
 }
 .form {
-	
+	margin: 5px 0;
 	height: 110px;
 	width: 100%;
 	display: block;
@@ -307,7 +307,7 @@
 }
 .form__input{
 	margin: 10px;
-	max-width: 400px;
+	max-width: 300px;
 	height: 50px;
 	border: none;	
 	@include font_text;
