--- a/scss/style_768.scss
+++ b/scss/style_768.scss
@@ -213,12 +213,13 @@
 	flex: none;
 	padding-left: 0;
 	margin: 0;
-	padding: 0;
+	padding: 10px 0;
 }
 .blog__imges {
 	width: 50%;
 	padding: 0;
 }
+
 .adaptation{
 	display: flex;
 }
