--- a/scss/style_320.scss
+++ b/scss/style_320.scss
@@ -353,11 +353,11 @@
 	margin-bottom: 0.5em;
 }
 
-.modal .modal-wrapper {
-	width: 90%;
-	height: 60%;
-	max-width: 280px;
-	min-height: 280px;
+.modal-wrapper {
+	width: 80%;
+	height: 35%;
+	// max-width: 280px;
+	// min-height: 280px;
 	top: 5%;
 	
 }
