--- a/scss/style_360.scss
+++ b/scss/style_360.scss
@@ -353,10 +353,10 @@
 	margin-bottom: 0.5em;
 }
 
-.modal .modal-wrapper {
+.modal-wrapper {
 	width: 90%;
 	height: 60%;
-	max-width: 400px;
+	max-width: 290px;
 	min-height: 280px;
 	top: 5%;
 	
