--- a/css/style_320.css
+++ b/css/style_320.css
@@ -557,11 +557,9 @@
     margin-bottom: 0.5em;
   }
 
-  .modal .modal-wrapper {
-    width: 90%;
-    height: 60%;
-    max-width: 280px;
-    min-height: 280px;
+  .modal-wrapper {
+    width: 80%;
+    height: 35%;
     top: 5%;
   }
 
