--- a/css/style_480.css
+++ b/css/style_480.css
@@ -557,9 +557,7 @@
     margin-bottom: 0.5em;
   }
 
-  .modal .modal-wrapper {
-    width: 90%;
-    height: 60%;
+  .modal-wrapper {
     max-width: 400px;
     min-height: 280px;
     top: 5%;
