--- a/scss/style.scss
+++ b/scss/style.scss
@@ -784,7 +784,7 @@ a{
   overflow-x: hidden;
   transition: all 0.8s ease 0s;*/
 }
-.modal .modal-wrapper {
+.modal-wrapper {
 	width: 50%;
 	height: 40%;
 	max-width: 400px;
