--- a/scss/style_480.scss
+++ b/scss/style_480.scss
@@ -353,9 +353,9 @@
 	margin-bottom: 0.5em;
 }
 
-.modal .modal-wrapper {
-	width: 90%;
-	height: 60%;
+.modal-wrapper {
+	// width: 90%;
+	// height: 60%;
 	max-width: 400px;
 	min-height: 280px;
 	top: 5%;
