--- a/scss/style_768.scss
+++ b/scss/style_768.scss
@@ -363,9 +363,9 @@
 	margin-right: 68.5px;
 }
 
-.modal .modal-wrapper {
-	width: 70%;
-	height: 60%;
+ .modal-wrapper {
+	// width: 70%;
+	// height: 60%;
 	max-width: 400px;
 	min-height: 300px;
 	top: 10%;
