--- a/css/style.css
+++ b/css/style.css
@@ -1151,6 +1151,7 @@ a {
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.95), rgba(0, 0, 0, 0.95)), url(Daco_1772774.png);
   max-width: 1440px;
   padding: 60px 0;
+  margin: 0 auto;
 }
 
 .footer-block {
